# demo-server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DemoServer.sln  DemoServer.vcxproj  DemoServer.vcxproj.filters  README.md  packages.config  settings.xml
DemoServer/: Client.cpp  Client.h  DemoServer.cpp  DemoServer.vcxproj  DemoServer.vcxproj.filters  GameServer.cpp  GameServer.h  Packet.cpp  Packet.h  PacketManager.cpp  PacketManager.h  Socket.cpp  Socket.h  SocketManager.cpp  SocketManager.h  pch.h
src/: CMakeLists.txt  Client.cpp  Client.h  Config.cpp  Config.h  DemoServer.cpp  Game.cpp  Game.h  GameServer.cpp  GameServer.h  Packet.cpp  Packet.h  Socket.cpp  Socket.h
src/Game/: Client.cpp  Client.h  Game.cpp  Game.h  Snapshot.cpp  Snapshot.h  SnapshotManager.cpp  SnapshotManager.h
src/Game/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h  Server.cpp  Server.h
src/Game/Message/: Entity.cpp  Entity.h  EntityMessage.cpp  EntityMessage.h  PlayerChat.cpp  PlayerChat.h  PlayerDisconnect.cpp  PlayerDisconnect.h  PlayerEntity.cpp  PlayerEntity.h  ReliableMessage.cpp  ReliableMessage.h  RemoveEntity.cpp  RemoveEntity.h
src/Game/NetSim/: NetSim.cpp  NetSim.h
src/Game/Packet/: InPacket.cpp  InPacket.h  OutPacket.cpp  OutPacket.h  Packet.cpp  Packet.h
src/Game/Snapshot/: Snapshot.cpp  Snapshot.h  SnapshotBuffer.cpp  SnapshotBuffer.h  SnapshotManager.cpp  SnapshotManager.h
src/Packet/: InPacket.cpp  InPacket.h  OutPacket.cpp  Packet.h
src/Utils/: AckBuffer.cpp  AckBuffer.h  CircularBuffer.h  MessageQueue.h
tests/: AckBufferTest.h  CMakeLists.txt  packages.config  test.cpp  tests.cpp  tests.vcxproj  tests.vcxproj.filters
tests/Tests/: SocketTest.h
tests/Tests/Game/Packet/: InPacketTest.h  OutPacketTest.h
tests/Tests/Utils/: AckBufferTest.h  MessageQueueTest.h
tools/: build_vs2019.bat  build_vs2019_release.bat
